--- a/.classpath
+++ b/.classpath
@@ -8,11 +8,33 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Program Files (x86)/MySQL/Connector J 8.0/mysql-connector-java-8.0.30.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Leonardo/Documents/TCC/iTonomise/src/main/webapp/WEB-INF/lib/commons-fileupload-1.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Leonardo/Documents/TCC/iTonomise/src/main/webapp/WEB-INF/lib/commons-io-2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Leonardo/Documents/TCC/iTonomise/src/main/webapp/WEB-INF/lib/mail-1.4.7.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
-	<classpathentry kind="lib" path="C:/Users/Leonardo/Documents/TCC/iTonomise/src/main/webapp/WEB-INF/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/MySQL/Connector J 8.0/mysql-connector-java-8.0.30.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Leonardo/Documents/TCC/iTonomise/src/main/webapp/WEB-INF/lib/commons-fileupload-1.4.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Leonardo/Documents/TCC/iTonomise/src/main/webapp/WEB-INF/lib/commons-io-2.2.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
+		<attributes>
+			<attribute name="owner.project.facets" value="jst.web;#system#"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Leonardo/Documents/TCC/iTonomise/src/main/webapp/WEB-INF/lib/jstl-1.2.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Leonardo/Documents/TCC/iTonomise/src/main/webapp/WEB-INF/lib/activation-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Leonardo/Documents/TCC/iTonomise/src/main/webapp/WEB-INF/lib/commons-email-1.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Leonardo/Documents/TCC/iTonomise/src/main/webapp/WEB-INF/lib/javax.mail-1.6.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
